fix: consertado o tamanho das letras e o gap entre os dois containers

--- a/components/sections/ProjectsSection/ProjectsSection.scss
+++ b/components/sections/ProjectsSection/ProjectsSection.scss
@@ -1,5 +1,5 @@
 .projects-section {
-  display: flex;
+  display: grid;
   color: white;
   padding: 40px 80px 80px 80px;
 
@@ -7,6 +7,7 @@
     position: relative;
     z-index: 2;
     display: flex;
+    gap: 64px;
   }
   .header {
     width: 50%;
@@ -60,7 +61,8 @@
       }
     }
 
-    .projects {      width: 100%;
+    .projects {
+      width: 100%;
 
       padding-top: 0px;
     }
